--- a/src/main/resources/templates/github-auth-success.html
+++ b/src/main/resources/templates/github-auth-success.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>授权成功</title>
     <script>
         function CloseWebPage() {
@@ -24,6 +24,11 @@
         }
     </script>
     <style>
+        div {
+            margin-top: 50px;
+            text-align: center;
+        }
+
         button:hover,
         button:active {
             outline: 0;
@@ -92,7 +97,7 @@
     </style>
 </head>
 <body>
-<div style="margin-top: 50px; text-align: center">
+<div>
     <h1>获取 GitHub 授权成功！</h1>
     <h3>请关闭当前页面返回 EasyCI</h3>
     <button class="depth" onclick="CloseWebPage()">X</button>
